# try-using-llm-at-work

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  config-example.json  config-test.json  pull_subtrees.sh  pyproject.toml
.github/workflows/: ci.yaml
backend/: CMakeLists.txt  initialize.cpp  initialize.h  main.cpp  test_main.cpp
backend/capnp/: CapnpMessage.h  CapnpUtilities.h
backend/config/: Config.cpp  Config.h
backend/llama/: LlamaContext.cpp  LlamaContext.h  LlamaContext_test.cpp  LlamaModel.cpp  LlamaModel.h  LlamaModel_test.cpp  LlamaParams.cpp  LlamaParams.h  LlamaScope.cpp  LlamaScope.h  LlamaTokenizer.cpp  LlamaTokenizer.h  LlamaTokenizer_test.cpp  LlamaVocabulary.cpp  LlamaVocabulary.h  LlamaVocabulary_test.cpp
backend/service/: AppServer.cpp  AppServer.h  ContextServer.cpp  ContextServer.h  ModelServer.cpp  ModelServer.h  TokenizerServer.cpp  TokenizerServer.h
backend/utilities/: RegExp.cpp  RegExp.h  RegExp_test.cpp  RegexMatch.cpp  RegexMatch.h  RegexMatch_test.cpp  UTF8Text.cpp  UTF8Text.h  UTF8Text_test.cpp
chatbot/: jenkins_client_wrapper.py  jenkins_log_parser.py  llama_client.py  llama_client_wrapper.py
proto/: CMakeLists.txt  common.capnp  config.capnp  service.capnp
src/: CMakeLists.txt  Config.h  play.cpp  proto.capnp  service.cpp
src/capnp/: CapnpMessage.h
src/config/: Config.cpp  Config.h
src/llama/: LlamaContext.cpp  LlamaContext.h  LlamaModel.cpp  LlamaModel.h  LlamaParams.cpp  LlamaParams.h  LlamaTokenizer.cpp  LlamaTokenizer.h
src/proto/: CapnpMessage.h  config.capnp  service.capnp
src/service/: AppServer.cpp  AppServer.h  ContextServer.cpp  ContextServer.h  ModelServer.cpp  ModelServer.h  TokenizerServer.cpp  TokenizerServer.h
